environments/prod/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titan
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: titan
  type: NodePort
