environments/prod/app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: titan-ingress
spec:
  backend:
    serviceName: titan
    servicePort: 80
